[package]
name = "serenity-test"
version = "0.1.0"
authors = ["Aaron Robinson <aaronrobin1234@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10.5"
tokio = { version = "1.5.0", features = ["rt-multi-thread"] }
pleco = "0.5.0"